# pixr

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml
examples/: conversion_examples.py
gif_sizer/: __main__.py  parser.py  runner_factory.py
gif_sizer/command/: core.py  exceptions.py
gif_sizer/runners/: rescale.py  resize.py
pixr/: __main__.py  anonymize.py  formats.py  runner_factory.py  utils.py
pixr/command/: core.py  exceptions.py
pixr/runners/: __init__.py  anonymize.py  base.py  convert.py  rescale.py  resize.py  target_size.py
pixr/strategies/: __init__.py  base.py  factory.py  jpeg.py  png.py  webp.py
tests/: conftest.py  test_cli_error_handling.py  test_convert_functionality.py  test_formats.py  test_rescale_functionality.py  test_runner_factory.py  test_target_size_functionality.py
tests/test_command/: test_core.py
