[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixr"
version = "0.1.0"
authors = [
  { name="Maciej Smukowski", email="msmukowski@gmail.com" },
]
description = "A modern, command-line tool for fast and efficient image processing."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "click",
    "Pillow",
    "pydantic",
]

[project.scripts]
pixr = "pixr.__main__:main"

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
py_version = 312

[tool.mypy]
ignore_missing_imports = true